--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ darling = "0.20.10"
 derive_more = "2.0.1"
 dotenv = "0.15.0"
 es-fluent = { git = "https://github.com/stayhydated/es-fluent.git" }
+es-fluent-manager-core = { git = "https://github.com/stayhydated/es-fluent.git" }
+es-fluent-manager-singleton = { git = "https://github.com/stayhydated/es-fluent.git" }
 es-fluent-build = { git = "https://github.com/stayhydated/es-fluent.git" }
 fluent-bundle = "0.15.3"
 futures = "0.3.31"
@@ -38,6 +40,7 @@ log = "0.4.26"
 num-regex = { path = "crates/num-regex" }
 once_cell = "1.21.3"
 paste = "1.0.15"
+unic-langid = "0.9.6"
 prettyplease = "0.2.34"
 proc-macro-error2 = "2.0"
 proc-macro2 = "1.0.93"
