finish example, make inventory hidden

--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -6,6 +6,9 @@ license = "Unlicense"
 publish = false
 
 [dependencies]
+gpui = { workspace = true }
+gpui-component = { workspace = true }
+gpui-storybook = { workspace = true }
 
 [lints]
 workspace = true
