--- a/crates/gpui-storybook-core/Cargo.toml
+++ b/crates/gpui-storybook-core/Cargo.toml
@@ -18,6 +18,7 @@ quote = { workspace = true }
 rust-embed = { workspace = true }
 serde = { features = [ "derive" ], workspace = true }
 serde_json = { workspace = true }
+strum = { workspace = true, features = ["derive"] }
 tracing-subscriber = { features = [ "env-filter" ], workspace = true }
 unic-langid = { workspace = true, features = ["serde"] }
 
