--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -13,6 +13,7 @@ gpui = { workspace = true }
 gpui-component = { workspace = true }
 gpui-storybook = { workspace = true }
 strum = { workspace = true }
+rust-embed = { workspace = true }
 
 [build-dependencies]
 es-fluent-build = { workspace = true }
