--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ futures = "0.3.31"
 garde = "0.22.0"
 getset = "0.1.5"
 gpui = "0.2.0"
-gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
+gpui-component = "0.3.1"
 gpui-storybook = { path = "crates/gpui-storybook", version = "0.1.0" }
 gpui-storybook-core = { path = "crates/gpui-storybook-core", version = "0.1.0" }
 gpui-storybook-macros = { path = "crates/gpui-storybook-macros", version = "0.1.0" }
