--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ license = "MIT OR Apache-2.0"
 publish = true
 readme = "README.md"
 repository = "https://github.com/stayhydated/gpui-storybook"
+rust-version = "1.88"
 version = "0.1.0"
 
 [workspace.dependencies]
