--- a/crates/gpui-storybook-macros/Cargo.toml
+++ b/crates/gpui-storybook-macros/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
 name = "gpui-storybook-macros"
+description = """
+Macro crate for gpui-storybook
+"""
 edition.workspace = true
 license.workspace = true
-repository.workspace = true
+publish.workspace = true
 version.workspace = true
-publish = false
+repository.workspace = true
+readme.workspace = true
 
 [lib]
 proc-macro = true
