--- a/crates/gpui-storybook/Cargo.toml
+++ b/crates/gpui-storybook/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
 name = "gpui-storybook"
+description = """
+The gpui-storybook crate
+"""
 edition.workspace = true
-repository.workspace = true
+license.workspace = true
+publish.workspace = true
 version.workspace = true
-publish = false
-license-file = "LICENSE-APACHE"
+repository.workspace = true
+readme.workspace = true
 
 [features]
 default = [ "macros" ]
