--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gpui-storybook-example-i18n"
+name = "gpui-storybook-example"
 version.workspace = true
 edition.workspace = true
 license = "Unlicense"
