use gpui-component-assets

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,8 @@ futures = "0.3.31"
 garde = "0.22.0"
 getset = "0.1.5"
 gpui = "0.2.2"
-gpui-component = "0.4.1"
+gpui-component = "0.4.2"
+gpui-component-assets = "0.4.2"
 gpui-storybook = { path = "crates/gpui-storybook", version = "0.4.1" }
 gpui-storybook-core = { path = "crates/gpui-storybook-core", version = "0.4.1" }
 gpui-storybook-macros = { path = "crates/gpui-storybook-macros", version = "0.4.1" }
