--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ gpui-storybook = { path = "crates/gpui-storybook", version = "0.5.0" }
 gpui-storybook-core = { path = "crates/gpui-storybook-core", version = "0.5.0" }
 gpui-storybook-macros = { path = "crates/gpui-storybook-macros", version = "0.5.0" }
 heck = "0.5.0"
+insta = { version = "1.43.2" }
 inventory = "0.3.20"
 itertools = "0.14.0"
 log = "0.4.26"
