--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,9 +35,9 @@ fluent-bundle = "0.15.3"
 futures = "0.3.31"
 garde = "0.22.0"
 getset = "0.1.5"
-gpui = "0.2.2"
-gpui-component = "0.5.0"
-gpui-component-assets = "0.5.0"
+gpui = { git = "https://github.com/zed-industries/zed" }
+gpui-component = { git = "https://github.com/longbridge/gpui-component" }
+gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
 gpui-storybook = { path = "crates/gpui-storybook", version = "0.5.0" }
 gpui-storybook-core = { path = "crates/gpui-storybook-core", version = "0.5.0" }
 gpui-storybook-macros = { path = "crates/gpui-storybook-macros", version = "0.5.0" }
