--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ es-fluent-manager-embedded = "0.2.10"
 fluent-bundle = "0.15.3"
 gpui = { git = "https://github.com/zed-industries/zed" }
 gpui-component = { git = "https://github.com/longbridge/gpui-component" }
+reqwest_client = { git = "https://github.com/longbridge/gpui-component" }
 gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
 gpui-storybook = { path = "crates/gpui-storybook", version = "0.5.0" }
 gpui-storybook-core = { path = "crates/gpui-storybook-core", version = "0.5.0" }
