--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -14,6 +14,7 @@ gpui-component = { workspace = true }
 gpui-storybook = { workspace = true }
 rust-embed = { workspace = true }
 strum = { workspace = true }
+reqwest_client = { workspace = true }
 
 [build-dependencies]
 es-fluent-build = { workspace = true }
