--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ gpui-storybook-core = { path = "crates/gpui-storybook-core", version = "0.5.0" }
 gpui-storybook-macros = { path = "crates/gpui-storybook-macros", version = "0.5.0" }
 heck = "0.5.0"
 insta = { version = "1.43.2" }
+fake = "4.4.0"
 inventory = "0.3.20"
 itertools = "0.14.0"
 log = "0.4.26"
@@ -49,6 +50,7 @@ paste = "1.0.15"
 prettyplease = "0.2.34"
 proc-macro-error2 = "2.0"
 proc-macro2 = "1.0.93"
+rand = "0.8"
 quote = "1.0.38"
 rayon = "1.10.0"
 regex = "1.11.1"
