--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,7 @@ serde = "1.0.219"
 serde_json = "1.0.140"
 strum = "0.27.1"
 syn = "2.0.98"
+tracing = "0.1.44"
 thiserror = "2.0.11"
 tokio = "1.43.0"
 tracing-subscriber = "0.3.19"
