--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -19,6 +19,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 fake = { workspace = true }
 rand = { workspace = true }
+tracing-subscriber = { workspace = true }
 
 [lints]
 workspace = true
