--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -19,7 +19,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 fake = { workspace = true }
 rand = { workspace = true }
-tracing-subscriber = { workspace = true, features = ["env-filter"] }
+tracing-subscriber = { features = [ "env-filter" ], workspace = true }
 
 [lints]
 workspace = true
