--- a/crates/gpui-storybook-macros/Cargo.toml
+++ b/crates/gpui-storybook-macros/Cargo.toml
@@ -3,12 +3,13 @@ name = "gpui-storybook-macros"
 description = """
 Macro crate for gpui-storybook
 """
+version.workspace = true
+rust-version.workspace = true
 edition.workspace = true
 license.workspace = true
 publish.workspace = true
-version.workspace = true
 repository.workspace = true
-readme.workspace = true
+readme = "README.md"
 
 [lib]
 proc-macro = true
