--- a/crates/gpui-storybook/Cargo.toml
+++ b/crates/gpui-storybook/Cargo.toml
@@ -3,12 +3,13 @@ name = "gpui-storybook"
 description = """
 The gpui-storybook crate
 """
+version.workspace = true
+rust-version.workspace = true
 edition.workspace = true
 license.workspace = true
 publish.workspace = true
-version.workspace = true
 repository.workspace = true
-readme.workspace = true
+readme = "README.md"
 
 [features]
 default = [ "macros" ]
