--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,9 @@ crate-paths = "0.2"
 darling = "0.23"
 derive_more = "2.1"
 dotenv = "0.15"
-es-fluent = { git = "https://github.com/stayhydated/es-fluent" }
-es-fluent-lang = { git = "https://github.com/stayhydated/es-fluent" }
-es-fluent-manager-embedded = { git = "https://github.com/stayhydated/es-fluent" }
+es-fluent = "0.9"
+es-fluent-lang = "0.9"
+es-fluent-manager-embedded = "0.9"
 fake = "4.4"
 fluent-bundle = "0.16"
 gpui = { git = "https://github.com/zed-industries/zed" }
