--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,18 @@ env:
   RUSTC_WRAPPER: sccache
 
 jobs:
+  es-fluent:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+      - name: Install Linux dependencies
+        uses: ./.github/actions/install-linux-deps
+      - name: Check FTL files
+        uses: stayhydated/es-fluent/crates/es-fluent-cli@master
+        with:
+          path: .
+          all: true
+
   test:
     runs-on: ubuntu-latest
 
