--- a/crates/gpui-storybook-core/Cargo.toml
+++ b/crates/gpui-storybook-core/Cargo.toml
@@ -10,21 +10,24 @@ license.workspace = true
 publish.workspace = true
 repository.workspace = true
 readme = "README.md"
-include = [ "src/**/*", "assets/**/*", "i18n.toml" ]
+include = ["src/**/*", "assets/**/*", "i18n.toml"]
 
 [dependencies]
 anyhow = { workspace = true }
 es-fluent = { workspace = true }
 es-fluent-manager-embedded = { workspace = true }
 gpui = { workspace = true }
-gpui-component = { features = [ "inspector" ], workspace = true }
+gpui-component = { features = ["inspector"], workspace = true }
 gpui-component-assets = { workspace = true }
 inventory = { workspace = true }
-rust-embed = { features = [ "interpolate-folder-path" ], workspace = true }
-serde = { features = [ "derive" ], workspace = true }
+rust-embed = { features = ["interpolate-folder-path"], workspace = true }
+serde = { features = ["derive"], workspace = true }
 serde_json = { workspace = true }
-strum = { features = [ "derive" ], workspace = true }
-unic-langid = { features = [ "serde" ], workspace = true }
+strum = { features = ["derive"], workspace = true }
+unic-langid = { features = ["serde"], workspace = true }
+
+[build-dependencies]
+es-fluent = { features = ["build"], workspace = true }
 
 [lints]
 workspace = true
