--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,19 +19,12 @@ version = "0.5.0"
 
 [workspace.dependencies]
 anyhow = "1.0"
-automod = "1.0"
-bon = "3.8"
-chrono = "0.4"
-crabtime = "1.1"
 crate-paths = "0.2"
 darling = "0.23"
-derive_more = "2.1"
-dotenv = "0.15"
 es-fluent = "0.14"
 es-fluent-lang = "0.14"
 es-fluent-manager-embedded = "0.14"
 fake = "4.4"
-fluent-bundle = "0.16"
 gpui = { git = "https://github.com/zed-industries/zed" }
 gpui-component = { git = "https://github.com/longbridge/gpui-component" }
 gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
@@ -39,22 +32,15 @@ gpui-storybook = { path = "crates/gpui-storybook", version = "0.5.0" }
 gpui-storybook-core = { path = "crates/gpui-storybook-core", version = "0.5.0" }
 gpui-storybook-macros = { path = "crates/gpui-storybook-macros", version = "0.5.0" }
 heck = "0.5"
-insta = { version = "1.46" }
+insta = "1.46"
 inventory = "0.3"
 itertools = "0.14"
-log = "0.4"
-once_cell = "1.21"
-paste = "1.0"
 prettyplease = "0.2"
-proc-macro-error2 = "2"
 proc-macro2 = "1.0"
 quote = "1.0"
 rand = "0.9"
-rayon = "1.11"
-regex = "1.12"
 reqwest_client = { git = "https://github.com/longbridge/gpui-component" }
 rust-embed = "8.11"
-rust_decimal = "1.40"
 serde = "1.0"
 serde_json = "1.0"
 strum = "0.27"
