--- a/crates/gpui-storybook-core/Cargo.toml
+++ b/crates/gpui-storybook-core/Cargo.toml
@@ -26,6 +26,9 @@ serde_json = { workspace = true }
 strum = { features = [ "derive" ], workspace = true }
 unic-langid = { features = [ "serde" ], workspace = true }
 
+[target.'cfg(target_os = "linux")'.dependencies]
+gtk = { version = "0.18" }
+
 [build-dependencies]
 es-fluent = { features = [ "build" ], workspace = true }
 
