--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-default-members = ["example"]
+default-members = [ "example" ]
 members = [
   "crates/gpui-storybook",
   "crates/gpui-storybook-core",
@@ -24,13 +24,18 @@ darling = "0.23"
 es-fluent = "0.14"
 es-fluent-lang = "0.14"
 es-fluent-manager-embedded = "0.14"
-fake = "4.4"
 gpui = { git = "https://github.com/zed-industries/zed" }
 gpui-component = { git = "https://github.com/longbridge/gpui-component" }
 gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
 gpui-storybook = { path = "crates/gpui-storybook", version = "0.5.0" }
 gpui-storybook-core = { path = "crates/gpui-storybook-core", version = "0.5.0" }
 gpui-storybook-macros = { path = "crates/gpui-storybook-macros", version = "0.5.0" }
+gpui_platform = { features = [
+  "font-kit",
+  "x11",
+  "wayland",
+  "runtime_shaders",
+], git = "https://github.com/zed-industries/zed" }
 heck = "0.5"
 insta = "1.46"
 inventory = "0.3"
@@ -38,12 +43,11 @@ itertools = "0.14"
 prettyplease = "0.2"
 proc-macro2 = "1.0"
 quote = "1.0"
-rand = "0.9"
 reqwest_client = { git = "https://github.com/longbridge/gpui-component" }
 rust-embed = "8.11"
 serde = "1.0"
 serde_json = "1.0"
-strum = "0.27"
+strum = "0.28"
 syn = "2.0"
 thiserror = "2.0"
 tokio = "1.49"
