--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -16,10 +16,8 @@ rust-embed = { workspace = true }
 strum = { workspace = true }
 reqwest_client = { workspace = true }
 serde = { workspace = true }
-serde_json = { workspace = true }
-fake = { workspace = true }
-rand = { workspace = true }
 tracing-subscriber = { features = [ "env-filter" ], workspace = true }
+gpui_platform = { workspace = true }
 
 [build-dependencies]
 es-fluent = { features = [ "build" ], workspace = true }
